--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <title>🦾Robot Corp</title>
-        <link rel="stylesheet" href="resources/css/index.css"> 
+        <link rel="stylesheet" href="./resources/css/index.css"> 
     </head>
     
     <body>
