--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div id="ending"> 
                 <section class="contact">
-                    <p><h4><em>Company Email:</em></h4> PeakIsTheGoal@</p>
+                    <p><h4><em>Company Email:</em></h4> sparkcorp.007@gmail.com </p>
                     <p><h4><em>Number:</em></h4> 111 111 1111</p>
                     <p><h4><em>Partenaires:</em></h4> Boston Dynamics, SpaceX, NASA</p>
                 </section>
