--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <hr id="endBannerLine">
             </div>
             <!-- Robot fan art -->
-            <img src="./resources/images/_yoroi___future_tech_samurai_armor_02_by_przemek_duda_dbrgvkf-pre.jpg" alt="" class="ombre">
+            <img src="./resources/images/icons/icons8-pubg-helmet-24.png" alt="" class="ombre">
             <section id="presentation">
                 <p>This is my personal portfolio project. I'm a College student in web programming based in Montreal but waiting for my papers to be renewed, i decided to 
                     take action in the meantime. <br> I enrolled in a fullstack/front-end engineering career path on Codecademy and this is what i am able to do at my current best.<br> 
